# msquic_cellular

./: .gitignore  BBR_FILTER_COMPARISON_ANALYSIS.md  BBR_PACKET_LOGGING_IMPLEMENTATION.md  CMakeLists.txt  Cargo.toml  analyze_bbr_comparison.py  analyze_inflight_cwnd.py  bbr_analysis_summary.md  bbr_high_frequency_analysis.py  build_combined_secnetperf.sh  build_with_ebpf.sh  simple_build.sh
.github/workflows/: build.yml  cargo.yml  docker-publish-xcomp.yml  docker-publish.yml  stress.yml  test.yml
bbr_logs/: 4connsbbr_log.txt  analyze_rtt_distribution.py  bbr_log.txt  bbr_log.txt_10ms  bbr_summary.txt  plot_msquic_bbr_4charts.py  tcp_bbr.txt  tcp_bbr_20250720_174501.txt  tcp_bbr_20250720_193155.txt
msquicdocs/: BBR_FILTER_COMPARISON_ANALYSIS.html  BBR_PACKET_LOGGING_IMPLEMENTATION.html  bbr_analysis_summary.html  index.html  index.json  manifest.json
msquicdocs/docs/: API.html  Architecture.html  BUILD.html  CredScan.html  Deployment.html  Development.html  Diagnostics.html  Execution.html  FAQ.html  FIPS.html  InteropServerSetup.html  PGO.html  Platforms.html  PreviewFeatures.html  QTIP.html  ReceiveBuffer.html  Release.html  Sample.html  Settings.html  Streams.html  TEST.html  TLS.html  TSG.html  ThreatModel.html  Versions.html
src/core/: CMakeLists.txt  bbr.c  bbr.h  bbr_packet_level_logging.c  bbr_packet_level_logging.h  congestion_control.h  connection.c  connection.h  cubic.c  kalman_filter.c  kalman_filter.h
src/inc/: msquic.h
src/perf/lib/: CMakeLists.txt  SecNetPerf.h  SecNetPerfMain.cpp  tcp_logger.c  tcp_logger.h  tcp_ss_logger.c  tcp_ss_logger.h
(+56 files in other folders)
